--- a/src/index.scss
+++ b/src/index.scss
@@ -67,10 +67,10 @@ $increase-font-size-on-larger-screens: false;
 
 // Skeleton loading
 .skeleton-square {
-    background-color: #e0e0e0;
-    aspect-ratio: "1/1";
+    background-color: #ececec;
+    aspect-ratio: 1 / 1;
     padding: "10px";
-    animation: pulse 1.5s infinite ease-in-out;
+    animation: pulse 3s infinite ease-in-out;
 }
 
 @keyframes pulse {
@@ -80,5 +80,16 @@ $increase-font-size-on-larger-screens: false;
     }
     50% {
         opacity: 0.5;
+    }
+}
+
+@keyframes appear {
+    0% {
+        opacity: 0;
+        transform: scale(0.9);
+    }
+    100% {
+        opacity: 1;
+        transform: scale(1);
     }
 }
